--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -16,6 +16,17 @@
     <th:block th:replace="header :: top"></th:block>
     <div id="main">
 
+        <h1> 커뮤니티 글작성</h1>
+        <form method="get" action="/community/writeSave" th:object="${boardDto}">
+            <div id="formData">
+                작성자 : <input type="text" th:field="*{writer}"> <br>
+                제목 : <input type="text" th:field="*{title}"> <br>
+                내용 : <textarea th:field="*{content}"></textarea>
+
+            </div>
+            <button> 작성 </button>
+        </form>
+
     </div>
 </div>
 
