--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -16,6 +16,23 @@
   <th:block th:replace="header :: top"></th:block>
   <div id="main">
 
+    <h1> 상세 페이지 </h1>
+
+    <div id="detailBox" th:object="${boardDto}">
+
+      <div> 작성자 : <span th:text="*{writer}"></span> </div>
+      <div> 제목 : <span th:text="*{title}"></span></div>
+      <div> 내용 : <p th:text="*{content}"></p></div>
+
+      <div>
+
+          <a th:href="'/community/update?id=' + *{boardId}">수정</a>
+          <a th:href="'/community/delete?id=' + *{boardId}">삭제</a>
+      </div>
+    </div>
+
+
+
   </div>
 </div>
 
