--- a/src/main/resources/templates/board/index.html
+++ b/src/main/resources/templates/board/index.html
@@ -16,6 +16,28 @@
     <th:block th:replace="header :: top"></th:block>
     <div id="main">
 
+        <h1> 커뮤니티 </h1>
+        <div id="writeBt">
+            <a href="/community/write">글작성</a>
+        </div>
+        <div id="listBox">
+            <table id="listTable">
+                <tr>
+                    <th class="num">번호</th>
+                    <th class="title">제목</th>
+                </tr>
+
+                <tr th:each="row : ${boardListDto}">
+                    <td class="num" th:text="${row.boardId}"></td>
+                    <td class="title">
+                        <a th:href="'/community/detail?id='+${row.boardId}"
+                            th:text="${row.title}"></a>
+                    </td>
+                </tr>
+
+            </table>
+        </div>
+
     </div>
 </div>
 
