--- a/src/main/resources/templates/board/index.html
+++ b/src/main/resources/templates/board/index.html
@@ -28,9 +28,9 @@
                 </tr>
 
                 <tr th:each="row : ${boardListDto}">
-                    <td class="num" th:text="${row.boardId}"></td>
+                    <td class="num" th:text="${row.id}"></td>
                     <td class="title">
-                        <a th:href="'/community/detail?id='+${row.boardId}"
+                        <a th:href="'/community/detail?id='+${row.id}"
                             th:text="${row.title}"></a>
                     </td>
                 </tr>
