--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -26,8 +26,8 @@
 
       <div>
 
-          <a th:href="'/community/update?id=' + *{boardId}">수정</a>
-          <a th:href="'/community/delete?id=' + *{boardId}">삭제</a>
+          <a th:href="'/community/update?id=' + *{id}">수정</a>
+          <a th:href="'/community/delete?id=' + *{id}">삭제</a>
       </div>
     </div>
 
