--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -8,7 +8,7 @@
     <h1> <a href="/">HOME</a></h1>
 
     <h2>회원가입</h2>
-    <form method="" action=""   >
+    <form method="post" action=""   >
 
 
     </form>
