--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,8 +8,12 @@
     <h1> <a href="/">HOME</a></h1>
 
     <h2>회원가입</h2>
-    <form method="post" action=""   >
+    <form method="post" action="/signUp" th:object="${memberDto}"   >
+        아이디 : <input type="text" th:field="*{userId}">   <br>
+        비밀번호 :<input type="password" th:field="*{password}"> <br>
+        연락처 : <input type="text" th:field="*{tel}">  <br>
 
+        <button>가입</button>
 
     </form>
 </body>
