--- a/src/main/resources/templates/member/signIn.html
+++ b/src/main/resources/templates/member/signIn.html
@@ -8,8 +8,10 @@
     <h1> <a href="/">HOME</a></h1>
     <h2>로그인</h2>
 
-    <form method="post" action="" >
-
+    <form method="post" action="/signIn" th:object="${memberLoginDto}" >
+        아이디 : <input type="text" th:field="*{userId}">   <br>
+        비밀번호 : <input type="password" th:field="*{password}">  <br>
+        <button>로그인</button>
 
     </form>
 
