--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,16 @@
 <body>
       <h1> 스프링 시큐리티 사용하기</h1>
 
-      <a href="/signUp">회원가입</a>
-      <a href="/signIn">로그인</a>
+          <div th:if="${session.user ==null}">
+              <a href="/signUp">회원가입</a>
+              <a href="/signIn">로그인</a>
+          </div>
+
+        <div th:if="${session.user != null}">
+            <a href="/userHome">유저페이지 이동</a>
+
+        </div>
+
+
 </body>
 </html>
