--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+        xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="/css/init.css">
 </head>
 <body>
       <h1> 스프링 시큐리티 사용하기</h1>
-
-          <div th:if="${session.user ==null}">
+<!--
+    isAnonymous() : 인증 받지 않은 사람 - 아무나
+    isAuthenticated() : 인증 받은 사람 - 로그인성공
+-->
+      <div id="anonymous" sec:authorize="isAnonymous()">
               <a href="/signUp">회원가입</a>
               <a href="/signIn">로그인</a>
-          </div>
+      </div>
 
-        <div th:if="${session.user != null}">
+      <div sec:authorize="isAuthenticated()">
+           <a href="/logout">로그아웃</a>
+      </div>
+
+      <div id="user" >
             <a href="/userHome">유저페이지 이동</a>
+      </div>
 
+        <div >
+            <a href="/guestHome">게스트페이지 이동</a>
         </div>
-
+        <div>
+            <a href="/adminHome">관리자페이지 이동</a>
+        </div>
 
 </body>
 </html>
