--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -7,6 +7,9 @@
 <body>
         <h1> 회원가입 페이지</h1>
         <form method="post" action="/signUp" th:object="${memberDto}">
+
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
             아이디 : <input type="text" th:field="*{userId}">  <br>
             <p th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}"></p>
 
